--- a/src/main/resources/templates/clubs-create.html
+++ b/src/main/resources/templates/clubs-create.html
@@ -10,23 +10,34 @@
 <body class="d-flex flex-column h-100">
 <main class="flex-shrink-0">
     <section layout:fragment="body" class="container py-5">
-
+        <div class="container">
+            <nav aria-label="breadcrumb">
+                <ol class="breadcrumb">
+                    <li class="breadcrumb-item"><a th:href="@{/}">Home</a></li>
+                    <li class="breadcrumb-item"><a th:href="@{/clubs}">Club list</a></li>
+                    <li class="breadcrumb-item">Add club</li>
+                </ol>
+            </nav>
+        </div>
         <div class="container px-5 col-10">
-            <form role="form" method="post" th:action="@{/clubs}" th:object="${club}">
-                <div>ee
+            <form role="form" method="post" th:action="@{/clubs/new}" th:object="${club}">
+                <div>
                     <input type="hidden" id="club-id" name="club-id" th:field="*{id}" hidden="hidden">
                 </div>
                 <div class="mb-3">
                     <label for="club-title" class="form-label">Club title</label>
                     <input type="text" class="form-control" id="club-title" name="title" th:field="*{title}" placeholder="Title">
+                    <div th:if="${#fields.hasErrors('title')}" th:errors="*{title}" class="form-text text-danger"></div>
                 </div>
                 <div class="mb-3">
                     <label for="club-photo-url" class="form-label">Club photo url</label>
                     <input type="url" class="form-control" id="club-photo-url" name="photoUrl" th:field="*{photoUrl}" placeholder="Photo url">
+                    <div th:if="${#fields.hasErrors('photoUrl')}" th:errors="*{photoUrl}" class="form-text text-danger"></div>
                 </div>
                 <div class="mb-3">
                     <label for="club-content" class="form-label">Club content</label>
                     <input type="text" class="form-control" id="club-content" name="content" th:field="*{content}" placeholder="Write club content here...">
+                    <div th:if="${#fields.hasErrors('content')}" th:errors="*{content}" class="form-text text-danger"></div>
                 </div>
                 <button type="submit" class="btn btn-primary col-12">Submit</button>
             </form>
